@@ -7,6 +7,8 @@ two versions can be retrieved from Subversion.
 0.6
 === (2007-??-??)
 
+* Added support for iTesco.cz.
+
 0.5
 === (2007-12-11)
 
